--- a/exercises/02_basic_calculator/08_overflow/Cargo.toml
+++ b/exercises/02_basic_calculator/08_overflow/Cargo.toml
@@ -2,3 +2,9 @@
 name = "overflow"
 version = "0.1.0"
 edition = "2021"
+
+[profile.dev]
+overflow-checks = false
+
+[profile.test]
+overflow-checks = false
